--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header id="main-header">
       <div class="row no-gutters">
         <div class="col-lg-4 col-md-5">
-          <img src="img/_0ZrtrgwBF4.jpg" />
+          <img src="251-600x600.jpg" />
         </div>
         <div class="col-lg-8 col-md-7">
           <div class="d-flex flex-column">
